Fix menu favorites jumping when hovering over entries

--- a/Customizable-Cinnamon/cinnamon/sass/components/menu.scss
+++ b/Customizable-Cinnamon/cinnamon/sass/components/menu.scss
@@ -37,6 +37,7 @@
 
 .menu-favorites-button:hover {
   padding: 10px-$border-width;
+  height: 32px - ($border-width * 2);
 }
 
 .menu-places-box {
